--- a/package.json
+++ b/package.json
@@ -9,18 +9,20 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.21.0",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
-    "expo": "~50.0.11",
+    "expo": "~50.0.14",
     "expo-barcode-scanner": "^12.9.3",
-    "expo-camera": "^14.0.6",
+    "expo-camera": "~14.1.1",
     "expo-font": "^11.10.3",
     "expo-notifications": "^0.27.6",
     "expo-secure-store": "^12.8.1",
     "expo-status-bar": "~1.11.1",
     "firebase": "^10.8.1",
     "react": "18.2.0",
-    "react-native": "0.73.4"
+    "react-native": "^0.73.6",
+    "react-native-config": "^1.5.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
